modules/noosphere/taghmata/nixidy/manifests/prod/traefik/Ingress-longhorn-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: longhorn-ip-root
  namespace: longhorn-system
spec:
  ingressClassName: traefik
  rules:
    - host: longhorn.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.noosphere.uk
      secretName: longhorn-tls
